--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,28 +1,12 @@
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
+html, body { 
+  height: 100%; 
 }
-
-.container {
-  max-width: 1200px;
-  margin: auto;
+body { 
+  margin: 0; 
+  font-family: Roboto, 
+  "Helvetica Neue", 
+  sans-serif; 
 }
-
-.btn {
-  cursor: pointer;
-  border-radius: 4px;
-  margin: 4px;
-  background-color: slateblue;
-  color: #fff;
-  transition: 200ms ease-in-out;
-  border: none;
-  padding: 10px 30px;
-
-  &:hover {
-    background-color: darken(slateblue, 10%);
-  }
+.spacer {
+  flex: 1 1 auto;
 }
